fix: fix tabs shadow overflow

--- a/packages/dumpling/src/tabs/Tabs.scss
+++ b/packages/dumpling/src/tabs/Tabs.scss
@@ -65,7 +65,7 @@
     box-sizing: content-box;
     padding-left: 8px;
     padding-right: 15px;
-    height: 18px;
+    height: 19px;
     display: flex;
     align-items: center;
     column-gap: 8px;
